--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxt/ui": "^2.17.0",
-    "nuxt": "^3.12.4",
-    "nuxt-icon-tw": "^0.1.4",
+    "@nuxt/icon": "^1.5.1",
+    "@nuxt/ui": "^2.18.4",
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "@primevue/nuxt-module": "^4.0.5",
+    "nuxt": "^3.13.1",
+    "nuxt-icon-tw": "^1.0.0",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.5",
     "hls.js": "^1.5.13",
+    "primevue": "^4.0.5",
     "vidstack": "^1.11.30"
   }
 }
