--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/icon": "^1.5.1",
-    "@nuxt/ui": "^2.18.4",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@primevue/nuxt-module": "^4.0.5",
     "nuxt": "^3.13.1",
@@ -22,8 +21,10 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.5",
+    "@vueuse/core": "^11.0.3",
     "hls.js": "^1.5.13",
-    "primevue": "^4.0.5",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.0.7",
     "vidstack": "^1.11.30"
   }
 }
