--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@eyevinn/webrtc-player": "github:hatsch/webrtc-player",
     "@primevue/themes": "^4.0.5",
     "@vueuse/core": "^11.0.3",
     "hls.js": "^1.5.13",
