--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "build": "nuxt build ",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare && cd node_modules/@eyevinn/webrtc-player && npm install && npm run build"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/icon": "^1.5.1",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@primevue/nuxt-module": "^4.0.5",
-    "nuxt": "^3.13.1",
+    "nuxt": "^3.15.1",
     "nuxt-icon-tw": "^1.0.0",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@eyevinn/webrtc-player": "github:hatsch/webrtc-player",
+    "@eyevinn/webrtc-player": "git+https://github.com/Eyevinn/webrtc-player.git#main",
     "@primevue/themes": "^4.0.5",
     "@vueuse/core": "^11.0.3",
     "hls.js": "^1.5.13",
